--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
-[package]
-name = "validatron"
-version = "0.1.0"
-authors = ["Frankie Foston <frankie.foston@spire.com>"]
-edition = "2018"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+members = [
+    "validatron_derive",
+    "validatron",
+]
