--- a/validatron/Cargo.toml
+++ b/validatron/Cargo.toml
@@ -3,8 +3,14 @@ name = "validatron"
 version = "0.1.0"
 authors = ["Frankie Foston <frankie.foston@spire.com>"]
 edition = "2018"
+license = "MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A data structure validation library designed for user input"
+repository = "https://github.com/nsat/validatron"
+readme = "../README.md"
+
+keywords = ["validation", "user-input"]
+categories = ["api-bindings", "science", "simulation"]
 
 [dependencies]
 thiserror="1.0"
