--- a/validatron/Cargo.toml
+++ b/validatron/Cargo.toml
@@ -15,11 +15,13 @@ categories = ["encoding", "parsing"]
 [dependencies]
 thiserror = "1.0"
 validatron_derive = { path = "../validatron_derive", version = "0.2.1" }
-serde = {version="1.0", optional=true, features=["derive"]}
+serde = { version = "1.0", optional = true, features = ["derive"] }
+indexmap = { version = "1", optional = true }
 
 [features]
 default = ["use-serde"]
 
+use-indexmap = ["indexmap"]
 use-serde = ["serde"]
 
 [dev-dependencies]
